# AutowareArchitectureProposal

./: README.md  Readme.md  autoware.proj.repos  buildscript.sh  launchscript.sh
e2e/: README.md  parse2graph.py
src/common/util/autoware_utils/: CMakeLists.txt
src/launcher/autoware_launch/launch/: autoware.launch
src/launcher/autoware_launch/rviz/: autoware.rviz
src/launcher/localization_launch/launch/: localization.launch
src/launcher/localization_launch/launch/pose_estimator/: pose_estimator.launch
src/localization/pose_estimator/ndt_scan_matcher/matching_score/: CMakeLists.txt
src/localization/pose_estimator/ndt_scan_matcher/ndt/: CMakeLists.txt
src/localization/pose_estimator/ndt_scan_matcher/ndt_omp/: CMakeLists.txt
src/localization/pose_estimator/ndt_scan_matcher/ndt_omp/include/ndt_omp/: ndt_omp.h  ndt_omp_impl.hpp
src/localization/pose_estimator/ndt_scan_matcher/ndt_pcl_modified/: CMakeLists.txt
src/localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/: CMakeLists.txt
src/localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/launch/: ndt_scan_matcher.launch
src/localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/src/: ndt_scan_matcher_core.cpp
src/localization/pose_twist_fusion_filter/ekf_localizer/: CMakeLists.txt
src/localization/twist_estimator/gyro_odometer/: CMakeLists.txt
src/localization/twist_estimator/pose2twist/: CMakeLists.txt
src/localization/util/autoware_localization_rviz_plugin/initial_pose_button_panel/: CMakeLists.txt
src/localization/util/pose_initializer/: CMakeLists.txt
src/localization/util/pose_initializer/src/: pose_initializer_core.cpp
src/sensing/driver/velodyne/velodyne_pointcloud/: CMakeLists.txt
src/sensing/driver/velodyne/velodyne_pointcloud/src/conversions/: convert.cc
src/sensing/preprocessor/gnss_poser/gnss/: CMakeLists.txt
src/sensing/preprocessor/gnss_poser/gnss_poser/: CMakeLists.txt
src/sensing/preprocessor/pointcloud/pointcloud_preprocessor/: CMakeLists.txt
